# VoidWarp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SKILL.md  android_final_log.txt  android_log.txt  build_all.bat  build_android.bat  build_windows.bat  clippy_log.txt  full_log.txt  full_log_final.txt  full_log_utf8.txt  process_icons.py  publish_windows.bat  test_file.txt  verify.bat
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
core/: Cargo.toml  build_error.txt  build_errors.txt  check_output.txt  clippy_output.txt  clippy_report.txt
core/.cargo/: config.toml
core/src/: android.rs  checksum.rs  ffi.rs  heartbeat.rs  io_utils.rs  lib.rs  protocol.rs  receiver.rs  sender.rs  transport.rs
core/src/discovery/: broadcast.rs  mod.rs
core/src/security/: crypto.rs  mod.rs
core/src/transfer/: mod.rs
core/src/transport/: connection.rs  manager.rs  mod.rs  packet.rs  udp.rs
core/tests/: integration_test.rs
docs/: FUTURE_FEATURES.md  NETWORK_ANALYSIS_REPORT.md  ROADMAP.md
docs/architecture/: ARCHITECTURE.md  C4_MODEL.md
docs/devops/: CICD_DESIGN.md
docs/protocol/: MESSAGE_FORMAT.md  PROTOCOL_SPEC.md  SECURITY.md
publish/VoidWarp-Windows/: README.txt  VoidWarp.Windows.deps.json  install.bat  setup_firewall.bat  uninstall.bat
tmp_android/apk/: AndroidManifest.xml  classes4.dex  classes5.dex  classes6.dex  resources.arsc
website/: index.html
