[package]
name = "voidwarp-core"
version = "2.0.0"
edition = "2021"
authors = ["VoidWarp Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bytes = "1.5"
socket2 = "0.5"

# Error Handling & Logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
mdns-sd = "0.17.2"

# Checksum & Utils
md5 = "0.7"
rand = "0.8"

[dev-dependencies]
tempfile = "3.24.0"
tokio-test = "0.4"

# Windows/desktop only: multi-interface broadcast (not used on Android)
[target.'cfg(not(target_os = "android"))'.dependencies]
local-ip-address = "0.5"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.13"
